--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,4 +1,7 @@
-// Import your components CSS files here.
 @import "alert";
 @import "avatar";
+@import "chatroom";
+@import "message";
 @import "navbar";
+@import "side-nav";
+@import "utilities";
