--- a/app/views/chatrooms/show.html.erb
+++ b/app/views/chatrooms/show.html.erb
@@ -10,13 +10,7 @@
       <div id="messages" data-chatroom-id="<%= @chatroom.id %>">
         <% if @chatroom.messages.any? %>
           <% @chatroom.messages.each do |message| %>
-            <div class="message-container" id="message-<%= message.id %>">
-              <i class="author">
-                <span><%= message.user.nickname %></span>
-                <small><%= message.created_at.strftime("%a %b %e at %l:%M%p") %></small>
-              </i>
-              <p><%= message.content %></p>
-            </div>
+            <%= render 'messages/message', message: message %>
           <% end %>
         <% else %>
           <div class="message-container">
